# Y1

./: .env.sample  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: config.py  database.py
migrations/: env.py
migrations/versions/: b5e83749dd34_init.py  ebfc63f53b27_init.py
src/applications/: dish.py  menu.py  submenu.py
src/domain/DTO/: menu.py
src/domain/models/: abstract_models.py  menu.py
src/infrastructure/repositories/: dish.py  menu.py  submenu.py
src/infrastructure/utils/: dish_format.py
src/interfaces/: dish.py  menu.py  submenu.py
